--- a/templates/predict_category.html
+++ b/templates/predict_category.html
@@ -5,8 +5,6 @@
         <input type="text" id="feature_1" name="feature_1">
         <label for="feature_2">Feature 2:</label>
         <input type="text" id="feature_2" name="feature_2">
-        <label for="category">Category:</label>
-        <input type="text" id="category" name="category">
-        <button type="submit">Add</button>
+        <button type="submit">Predict</button>
     </form>
 {% endblock %}
